--- a/app/SeqMine/src/app/components/about-seq-mine/about-seq-mine.component.html
+++ b/app/SeqMine/src/app/components/about-seq-mine/about-seq-mine.component.html
@@ -1,1 +1,43 @@
-<p>about-seq-mine works!</p>
+<div class="container mt-5">
+  <h1 class="text-center mb-5"> <img class="site-logo" src="/assets/images/SeqMine-logo.png" alt="Site logo" /></h1>
+  <p>
+    Welcome to our SeqMine, a tool for our workers to upload and manage
+    their database of FASTA files. FASTA files contain sequences of DNA, which
+    are a critical part of our research and investigation work.
+  </p>
+  <h2 class="mt-5">Features</h2>
+  <ul>
+    <li>Upload and store FASTA files securely on our server.</li>
+    <li>Search and filter FASTA files by keywords, date, and file type.</li>
+    <li>Download or share individual FASTA files with coworkers.</li>
+    <li>
+      Track the history of changes made to the FASTA files and their metadata.
+    </li>
+  </ul>
+  <h2 class="mt-5">Benefits</h2>
+  <ul>
+    <li>
+      Streamline the process of uploading and managing FASTA files, saving time
+      and resources.
+    </li>
+    <li>
+      Ensure data security by keeping all FASTA files in a secure and
+      centralized location.
+    </li>
+    <li>
+      Easily collaborate with coworkers by sharing or downloading FASTA files
+      and their metadata.
+    </li>
+    <li>
+      Facilitate data tracking and analysis by keeping a history of changes to
+      the FASTA files and their metadata.
+    </li>
+  </ul>
+  <h2 class="mt-5">Getting Started</h2>
+  <p>
+    To get started with our SeqMine, simply log in with your provided
+    credentials. If you have any questions or issues, please reach out to our
+    support team for assistance.
+  </p>
+  <p class="text-center mt-5">Thank you for using our SeqMine!</p>
+</div>
