multer conditional upload done, but must check it during the request as well to be able to send a message to the user if the file exists.

--- a/app/SeqMine/src/app/components/about-seq-mine/about-seq-mine.component.html
+++ b/app/SeqMine/src/app/components/about-seq-mine/about-seq-mine.component.html
@@ -30,7 +30,7 @@
     </li>
     <li>
       Facilitate data tracking and analysis by keeping a history of changes to
-      the sequence files and their metadata.
+      the sequenceng files and their metadata.
     </li>
   </ul>
   <h2 class="mt-5">Getting Started</h2>
