--- a/app/SeqMine/src/app/components/about-seq-mine/about-seq-mine.component.html
+++ b/app/SeqMine/src/app/components/about-seq-mine/about-seq-mine.component.html
@@ -1,8 +1,14 @@
 <div class="container mt-5">
-  <h1 class="text-center mb-5"> <img class="site-logo" src="/assets/images/SeqMine-logo.png" alt="Site logo" /></h1>
+  <h1 class="text-center mb-5">
+    <img
+      class="site-logo"
+      src="/assets/images/SeqMine-logo.png"
+      alt="Site logo"
+    />
+  </h1>
   <p>
-    Welcome to our SeqMine, a tool for our workers to upload and manage
-    their database of sequence files. Sequence files contain sequences of DNA, which
+    Welcome to our SeqMine, a tool for our workers to upload and manage their
+    database of sequence files. Sequence files contain sequences of DNA, which
     are a critical part of our research and investigation work.
   </p>
   <h2 class="mt-5">Features</h2>
@@ -11,14 +17,15 @@
     <li>Search and filter sequence files by keywords, date, and file type.</li>
     <li>Download or share individual sequence files with coworkers.</li>
     <li>
-      Track the history of changes made to the sequence files and their metadata.
+      Track the history of changes made to the sequence files and their
+      metadata.
     </li>
   </ul>
   <h2 class="mt-5">Benefits</h2>
   <ul>
     <li>
-      Streamline the process of uploading and managing sequence files, saving time
-      and resources.
+      Streamline the process of uploading and managing sequence files, saving
+      time and resources.
     </li>
     <li>
       Ensure data security by keeping all sequence files in a secure and
